docs: THM-01 swagger updated
